--- a/app/assets/stylesheets/ecommerce/organici/style.scss
+++ b/app/assets/stylesheets/ecommerce/organici/style.scss
@@ -17889,3 +17889,9 @@ left: 68%;
 .menu1{
     padding:10px 0px 0px 0px;
 }
+@media screen and (min-width: 320px){
+    .noscr{
+       
+        
+    }
+}
